config/wirecloud-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: wirecloud
  name: wirecloud
spec:
  ports:
  - name: 8000-tcp
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: wirecloud
    deploymentconfig: wirecloud
status:
  loadBalancer: {}
